--- a/src/Cerad/Bundle/AccountBundle/Resources/views/base.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Account!{% endblock %}</title>
+        <title>{% block title %}CeradAccount{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
