--- a/src/Cerad/Bundle/AccountBundle/Resources/views/layout.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/layout.html.twig
@@ -1,14 +1,14 @@
 {% extends '@CeradAccount/base.html.twig' %}
 
 {% block stylesheets %}
-
 {% stylesheets '@CeradAccountBundle/Resources/public/css/*' %}
     <link rel="stylesheet" href="{{ asset_url }}" />
 {% endstylesheets %}
-    
 {% endblock %}
 
 {% block body %}
+{% block layout_userinfo %}{% include '@CeradAccount/userinfo.html.twig' %}{% endblock %}
+
 {% block content %}{% endblock %}
 {% endblock %}
 
