--- a/src/Cerad/Bundle/AccountBundle/Resources/views/userinfo.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/userinfo.html.twig
@@ -7,9 +7,9 @@
             {% if app.user.person %}
                 {{ app.user.person.name }}
             {% endif %}
-            <a href="{{ path('cerad_account_signout') }}">Sign Out</a>
+            <a href="{{ path('cerad_account_logout') }}">Log Out</a>
         {% else %}
-            Guest <a href="{{ path('cerad_account_signin') }}">Sign In</a>
+            Guest <a href="{{ path('cerad_account_login') }}">Log In</a>
         {% endif %}          
       </span>
     </p>
