Uppercase view directories

--- a/src/Cerad/Bundle/AccountBundle/Resources/views/layout.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/layout.html.twig
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block body %}
+    
 {% block layout_userinfo %}{% include '@CeradAccount/userinfo.html.twig' %}{% endblock %}
+{% block layout_topmenu  %}{% include '@CeradAccount/topmenu.html.twig'  %}{% endblock %}
 
 {% block content %}{% endblock %}
 {% endblock %}
