--- a/src/Cerad/Bundle/AccountBundle/Resources/views/userinfo.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/userinfo.html.twig
@@ -9,7 +9,9 @@
             {% endif %}
             <a href="{{ path('cerad_account_logout') }}">Log Out</a>
         {% else %}
-            Guest <a href="{{ path('cerad_account_login') }}">Log In</a>
+            Guest 
+                <a href="{{ path('cerad_account_login')    }}">Log In</a>
+                <a href="{{ path('cerad_account_register') }}">Create New Account</a>
         {% endif %}          
       </span>
     </p>
