--- a/src/Cerad/Bundle/AccountBundle/Resources/views/welcome.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/welcome.html.twig
@@ -3,4 +3,6 @@
 {% block content %}
 <h3>Account App</h3>
 
+<h5>Log in to existing account.</h5>
+{% include '@CeradAccount/Security/login_form.html.twig' %}
 {% endblock %}
