--- a/src/Cerad/Bundle/AccountBundle/Resources/views/Password/Reset/check_email.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/Password/Reset/check_email.html.twig
@@ -3,10 +3,12 @@
 {% block content %}
 <h5>Check Your Email</h5>
 <p>
-    An email has been sent to: {{ email }}
-</p><p>
-    Click on the link in the email to reset your password.
-</p><p>
+    An email has been sent to: {{ email }}.  
+    It will contain a confirmation number.  
+    Enter the number in the form below.
+</p>
+{% include '@CeradAccount/Password/Reset/token_form.html.twig' %}
+<p>
     If the email does not arrive a few seconds then <strong>Check Your SPAM Folder.</strong>
 </p><p>
     Username: {{ username }} Token: {{ token }}
