--- a/src/Cerad/Bundle/AccountBundle/Resources/views/Password/Reset/email_body.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/Password/Reset/email_body.html.twig
@@ -1,8 +1,8 @@
-A password request has been made for: {{ user.username }}.
+A password reset request has been made for: {{ user.username }}.
 
-Your confirmation token is:  {{ user.confirmationToken }}
+Your confirmation number is:  {{ token }}
 
-Please enter this number on the site page and press continue.
+Please enter this number on the site confirmation page.
 
 Please do not replay to this email.  The site has contact information if you need additional help.
 
