--- a/src/Cerad/Bundle/AccountBundle/Resources/views/home.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/home.html.twig
@@ -1,6 +1,6 @@
 {% extends '@CeradAccount/layout.html.twig' %}
   
 {% block content %}
-<h3>Account Home</h3>
+<h3>Account Home Page</h3>
 
 {% endblock %}
