--- a/src/Cerad/Bundle/AccountBundle/Resources/views/welcome.html.twig
+++ b/src/Cerad/Bundle/AccountBundle/Resources/views/welcome.html.twig
@@ -1,7 +1,7 @@
 {% extends '@CeradAccount/layout.html.twig' %}
   
 {% block content %}
-<h3>Account App</h3>
+<h3>Account Welcome Page</h3>
 
 <h5>Log in to existing account.</h5>
 {% include '@CeradAccount/Security/login_form.html.twig' %}
